--- a/package.json
+++ b/package.json
@@ -19,24 +19,27 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "node server.js",
-    "test": "mocha-webpack --exit --webpack-config dev.webpack.config.js test/test.js"
+    "test": "mocha-webpack -w --webpack-config webpack.config.js --require src/js/test/setup.js src/js/test/test*.js"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.23",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "5.2.0",
-    "mocha-webpack": "2.0.0-beta.0",
+    "mocha": "6.0.2",
+    "mocha-loader": "^2.0.1",
+    "mocha-webpack": "^2.0.0-beta.0",
+    "mock-local-storage": "^1.1.8",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "pug": "^2.0.3",
@@ -51,6 +54,7 @@
     "vuex": "^3.1.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
